--- a/2-Javascript/demo.html
+++ b/2-Javascript/demo.html
@@ -25,13 +25,13 @@
                     <h1>Counter Value: <span id="counter"></span></h1>
                     <button class="waves-effect waves-light btn" onclick="incrementCounter()">Counter ++</button>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="input-field col s6">
                         <input value="Bob" id="first_name2" type="text" class="validate">
                         <label class="active" for="first_name2">First Name</label>
                     </div>
-                </div>
-                <div id="to-do-list" class="row"></div>
+                </div> -->
+                <!-- <div id="to-do-list" class="row"></div> -->
         </div>
         <script>
             // We will write our Javascript in here
