--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p>In this lesson we were introduced to basic concepts in HTML and CSS for building web pages</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://github.com/nabeelvalley/IntroToWeb/tree/master/Lesson%20Notes/1-Introduction.md">Notes</a>
+                        <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/1-Introduction.md">Notes</a>
                         <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/1-Introduction/index.html">Code</a>
                         <a href="./1-Introduction/index.html">Result</a>
                     </div>
@@ -41,7 +41,7 @@
                             <p>In this lesson we were introduced to basic concepts in JavaScript such as variables, functions, and events such as <b>onclick</b></p>
                         </div>
                         <div class="card-action">
-                            <a href="https://github.com/nabeelvalley/IntroToWeb/tree/master/Lesson%20Notes/1-JavaScript.md"">Notes</a>
+                            <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/2-JavaScript.md">Notes</a>
                             <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/2-Javascript/index.html">Code</a>
                             <a href="./2-Javascript/index.html">Result</a>
                             <a href="./2-Javascript/counter-demo.html">Demo 2</a>
