:lipstick: update the names to be better

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                             <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/2-JavaScript.md">Notes</a>
                             <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/2-Javascript/index.html">Code</a>
                             <a href="./2-Javascript/index.html">Result</a>
-                            <a href="./2-Javascript/counter-demo.html">Demo 2</a>
-                            <a href="./2-Javascript/todo-demo.html">Demo 1</a>
+                            <a href="./2-Javascript/counter-demo.html">Counter</a>
+                            <a href="./2-Javascript/todo-demo.html">ToDo</a>
                         </div>
                     </div>
                 </div>
