--- a/index.html
+++ b/index.html
@@ -25,30 +25,51 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">1. Introduction to HTML and CSS</span>
-                        <p>In this lesson we were introduced to basic concepts in HTML and CSS for building web pages</p>
+                        <p>In this lesson we were introduced to basic concepts in HTML and CSS for building web pages
+                        </p>
                     </div>
                     <div class="card-action">
-                        <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/1-Introduction.md">Notes</a>
-                        <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/1-Introduction/index.html">Code</a>
+                        <a
+                            href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/1-Introduction.md">Notes</a>
+                        <a
+                            href="https://github.com/nabeelvalley/IntroToWeb/blob/master/1-Introduction/index.html">Code</a>
                         <a href="./1-Introduction/index.html">Result</a>
                     </div>
                 </div>
-            </div>        
+            </div>
             <div class="col s12 m6">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title">2. Introduction to JavaScript</span>
-                            <p>In this lesson we were introduced to basic concepts in JavaScript such as variables, functions, and events such as <b>onclick</b></p>
-                        </div>
-                        <div class="card-action">
-                            <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/2-JavaScript.md">Notes</a>
-                            <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/2-Javascript/index.html">Code</a>
-                            <a href="./2-Javascript/index.html">Result</a>
-                            <a href="./2-Javascript/counter-demo.html">Counter</a>
-                            <a href="./2-Javascript/todo-demo.html">ToDo</a>
-                        </div>
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">2. Introduction to JavaScript</span>
+                        <p>In this lesson we were introduced to basic concepts in JavaScript such as variables,
+                            functions, and events such as <b>onclick</b></p>
+                    </div>
+                    <div class="card-action">
+                        <a
+                            href="https://github.com/nabeelvalley/IntroToWeb/blob/master/Lesson%20Notes/2-JavaScript.md">Notes</a>
+                        <a
+                            href="https://github.com/nabeelvalley/IntroToWeb/blob/master/2-Javascript/index.html">Code</a>
+                        <a href="./2-Javascript/index.html">Result</a>
+                        <a href="./2-Javascript/counter-demo.html">Counter</a>
+                        <a href="./2-Javascript/todo-demo.html">ToDo</a>
                     </div>
                 </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">From Design</span>
+                        <p>In this lesson we will learn to build a basic page based on a design
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a
+                            href="https://github.com/nabeelvalley/IntroToWeb/blob/master/doors-website/index.html">html</a>
+                        <a href="https://github.com/nabeelvalley/IntroToWeb/blob/master/doors-website/style.css">css</a>
+                        <a href="./doors-website/index.html">Result</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
